# graph-for-article-classification

./: README.md  article_loader.py  build_graph.py  community_detetction.py  embeddings.py  evaluation.py  pyproject.toml
community_results/: community_results.csv  evaluation.csv
data/: arxiv_dataset.csv
embeddings_results/: embeddings.npy
graph_results/: graph.gexf
report/: report.tex
